Money Manager 23.4.1
* Periodic payments