@@ -10,11 +10,10 @@
     <parent>
         <groupId>org.panteleyev.money</groupId>
         <artifactId>money-manager-parent</artifactId>
-        <version>23.3.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>money-manager-desktop</artifactId>
-    <version>23.3.1</version>
     <packaging>jar</packaging>
     <name>Desktop</name>
 
@@ -99,11 +98,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
@@ -127,6 +121,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -162,6 +159,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
+                        --enable-preview
                         --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
                         --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                         --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
@@ -184,6 +182,8 @@
                     </modulePaths>
                     <destination>target/dist</destination>
                     <javaOptions>
+                        <option>-Xms128m</option>
+                        <option>--enable-preview</option>
                         <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                     </javaOptions>
@@ -225,6 +225,8 @@
                         <id>default-cli</id>
                         <configuration>
                             <options>
+                                <option>-Xms128m</option>
+                                <option>--enable-preview</option>
                                 <option>--add-exports</option>
                                 <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                 <option>-Dprofile=${profile}</option>
@@ -236,6 +238,8 @@
                         <id>debug</id>
                         <configuration>
                             <options>
+                                <option>-Xms128m</option>
+                                <option>--enable-preview</option>
                                 <option>--add-exports</option>
                                 <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
